<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewBody"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/contentDescriptionBody"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".60"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_bg01" />


    <ImageView
        android:id="@+id/imageViewFace"
        android:layout_width="414dp"
        android:layout_height="0dp"
        android:contentDescription="@string/contentDescriptionFace"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".70"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_face" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutGifts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:id="@+id/imageViewGiftPurple"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/contentDescriptionGift01"
            android:scaleType="fitEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".40"
            app:srcCompat="@drawable/avd_gift02" />

        <ImageView
            android:id="@+id/imageViewGiftGreen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/contentDescriptionGift02"
            android:scaleType="fitEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".45"
            app:srcCompat="@drawable/avd_gift03" />

        <ImageView
            android:id="@+id/imageViewGiftPink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescriptionGift03"
            android:scaleType="fitEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".45"
            app:srcCompat="@drawable/avd_gift01" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewTit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/snowballs"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/tit"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutGifts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.jetradarmobile.snowfall.SnowfallView
        android:id="@+id/snowfallView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:snowflakeSpeedMax="4"
        app:snowflakeSpeedMin="2"
        tools:layout_editor_absoluteX="-65dp"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>